<resources>
    <string name="app_name">Dog Diary</string>
    <string name="input_description">Input description</string>
    <string name="create">create</string>
    <string name="input_breed">Input breed</string>
    <string name="f">F</string>
    <string name="m">M</string>
    <string name="choose_sex">Choose sex:</string>
    <string name="input_age">Input age</string>
    <string name="input_name">Input name</string>
    <string name="click_for_choosing_image">Click for choosing image</string>
    <string name="registration">Registration</string>
    <string name="breeds">Breeds</string>
    <string name="breed_height">height: %1$s cm</string>
    <string name="breed_weight">weight: %1$s kg</string>
    <string name="search">search</string>
    <string name="problem_toast_loading">Problem with loading</string>
    <string name="problem_toast_saving">Problem with saving</string>
    <string name="dog_page_age">%1$d years</string>
    <string name="dog_age">%1$d years</string>
    <string name="add_post">Add post</string>
    <string name="delete_dog">Delete profile</string>
    <string name="edit_post">Edit post</string>
    <string name="editing_description">editing description</string>
    <string name="save_changes">save changes</string>
    <string name="cancel">cancel</string>
    <string name="delete_post">Delete post</string>
    <string name="delete_post_dialog_title">Do you really want to delete post?</string>
    <string name="delete_dog_dialog_title">Do you really want to delete profile?</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="open_profile">open profile</string>
    <string name="profile_age">I am %1$d years old</string>
    <string name="profile_name">My name is %1$s</string>
    <string name="profile_breed">My breed is %1$s</string>
    <string name="change_image">change image</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_age">Edit age</string>
    <string name="edit_breed">Edit breed</string>
    <string name="edit_description">Edit description</string>
    <string name="edit_dog">Edit Dog</string>
</resources>