<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar_registration"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Edit Dog" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_edit_dog"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/txt_edit_dog_name"
                app:layout_constraintEnd_toStartOf="@id/btn_edit_img_dog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:src="@drawable/test_dolka" />

            <Button
                android:id="@+id/btn_edit_img_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_image"
                app:layout_constraintBottom_toBottomOf="@id/img_edit_dog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_edit_dog"
                app:layout_constraintTop_toTopOf="@id/img_edit_dog" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_edit_dog_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_name"
                app:layout_constraintBottom_toTopOf="@id/txt_edit_dog_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_edit_dog">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="?android:textColorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_edit_dog_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/edit_age"
                app:layout_constraintBottom_toTopOf="@id/radio_group_sex_edit_dog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_edit_dog_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="?android:textColorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_edit_dog_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:text="@string/choose_sex"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/radio_group_sex_edit_dog"
                app:layout_constraintEnd_toStartOf="@id/radio_group_sex_edit_dog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/radio_group_sex_edit_dog" />

            <RadioGroup
                android:id="@+id/radio_group_sex_edit_dog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/txt_edit_dog_breed"
                app:layout_constraintStart_toEndOf="@id/txt_edit_dog_sex"
                app:layout_constraintTop_toBottomOf="@id/txt_edit_dog_age">

                <RadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:text="@string/m"
                    android:textColor="?colorPrimaryVariant" />

                <RadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/f"
                    android:textColor="?colorPrimaryVariant" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_edit_dog_breed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:focusable="false"
                android:hint="@string/edit_breed"
                app:layout_constraintBottom_toTopOf="@id/txt_edit_dog_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_sex_edit_dog">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:maxLines="1"
                    android:textColor="?android:textColorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_edit_dog_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/edit_description"
                app:layout_constraintBottom_toTopOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_edit_dog_breed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:maxLines="3"
                    android:textColor="?android:textColorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/invisible_view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_edit_dog_description" />

            <Button
                android:id="@+id/btn_save_changes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/save_changes"
                app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="@id/btn_cancel" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_save_changes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invisible_view"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>