<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_add_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/green_light"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_post_choose_image"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="2"
        android:text="@string/click_for_choosing_image"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/image_add_post"
        app:layout_constraintEnd_toEndOf="@id/image_add_post"
        app:layout_constraintStart_toStartOf="@id/image_add_post"
        app:layout_constraintTop_toTopOf="@id/image_add_post" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_app_post_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_description"
        app:layout_constraintBottom_toTopOf="@id/btn_add_post_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_add_post"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:textColor="?android:textColorPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_post_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>